include/ups/upscaledb.h


struct ups_db_t;
typedef struct ups_db_t ups_db_t;
struct ups_env_t;
typedef struct ups_env_t ups_env_t;
struct ups_cursor_t;
typedef struct ups_cursor_t ups_cursor_t;
typedef struct {
  uint32_t size;
  void *data;
  uint32_t flags;
  uint32_t partial_offset;
  uint32_t partial_size;
} ups_record_t;
typedef struct {
  uint16_t size;
  void *data;
  uint32_t flags;
  uint32_t _flags;
} ups_key_t;
typedef struct {
  uint32_t name;
  uint64_t value;
} ups_parameter_t;
typedef void UPS_CALLCONV (*ups_error_handler_fun)(int level, const char *message);
UPS_EXPORT void UPS_CALLCONV
ups_set_error_handler(ups_error_handler_fun f);
UPS_EXPORT const char * UPS_CALLCONV
ups_strerror(ups_status_t status);
UPS_EXPORT void UPS_CALLCONV
ups_get_version(uint32_t *major, uint32_t *minor,
            uint32_t *revision);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_env_create(ups_env_t **env, const char *filename,
            uint32_t flags, uint32_t mode, const ups_parameter_t *param);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_env_open(ups_env_t **env, const char *filename,
            uint32_t flags, const ups_parameter_t *param);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_env_create_db(ups_env_t *env, ups_db_t **db,
            uint16_t name, uint32_t flags, const ups_parameter_t *params);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_env_open_db(ups_env_t *env, ups_db_t **db,
            uint16_t name, uint32_t flags, const ups_parameter_t *params);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_env_rename_db(ups_env_t *env, uint16_t oldname,
            uint16_t newname, uint32_t flags);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_env_erase_db(ups_env_t *env, uint16_t name, uint32_t flags);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_env_flush(ups_env_t *env, uint32_t flags);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_env_get_database_names(ups_env_t *env, uint16_t *names,
            uint32_t *count);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_env_close(ups_env_t *env, uint32_t flags);
struct ups_txn_t;
typedef struct ups_txn_t ups_txn_t;
UPS_EXPORT ups_status_t
ups_txn_begin(ups_txn_t **txn, ups_env_t *env, const char *name,
            void *reserved, uint32_t flags);
UPS_EXPORT ups_status_t
ups_txn_commit(ups_txn_t *txn, uint32_t flags);
UPS_EXPORT ups_status_t
ups_txn_abort(ups_txn_t *txn, uint32_t flags);
typedef int UPS_CALLCONV (*ups_compare_func_t)(ups_db_t *db,
                  const uint8_t *lhs, uint32_t lhs_length,
                  const uint8_t *rhs, uint32_t rhs_length);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_register_compare(const char *name, ups_compare_func_t func);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_db_set_compare_func(ups_db_t *db, ups_compare_func_t foo);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_db_find(ups_db_t *db, ups_txn_t *txn, ups_key_t *key,
            ups_record_t *record, uint32_t flags);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_db_insert(ups_db_t *db, ups_txn_t *txn, ups_key_t *key,
            ups_record_t *record, uint32_t flags);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_db_erase(ups_db_t *db, ups_txn_t *txn, ups_key_t *key, uint32_t flags);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_db_count(ups_db_t *db, ups_txn_t *txn, uint32_t flags,
            uint64_t *count);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_db_get_parameters(ups_db_t *db, ups_parameter_t *param);
UPS_EXPORT ups_env_t *UPS_CALLCONV
ups_db_get_env(ups_db_t *db);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_db_close(ups_db_t *db, uint32_t flags);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_cursor_create(ups_cursor_t **cursor, ups_db_t *db, ups_txn_t *txn,
            uint32_t flags);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_cursor_clone(ups_cursor_t *src, ups_cursor_t **dest);
UPS_EXPORT ups_status_t UPS_CALLCONV
ups_cursor_move(ups_cursor_t *cursor, ups_key_t *key,
            ups_record_t *record, uint32_t flags);
#define UPS_FIND_LT_MATCH               0x1000
#define UPS_FIND_GT_MATCH               0x2000